<resources>
    <string name="app_name">Weather App</string>
    <string name="temperature">Temperature</string>
    <string name="favorite">favorite</string>
    <string name="current_weather">Current Weather</string>
    <string name="weather">Weather</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="dew_point">Dew point</string>
    <string name="search_title">Search</string>
    <string name="location_hint">Location</string>
    <string name="weather_notification_channel_id" translatable="false">weather_channel</string>
    <string name="weather_notification_channel_name" translatable="false">Weather</string>
    <string name="location_name_format">%1$s, %2$s</string>
    <string name="notification_title">%1$d°C in %2$s</string>
    <string name="temperature_format">%1$d°</string>
    <string name="alt_temperature_format">%1$d° C</string>
    <string name="wind_speed_format">%1$d km/h</string>
    <string name="humidity_format">%1$d \%%</string>
    <string name="visibility_format">%1$d km</string>
    <string name="pressure_format">%1$d mb</string>
    <string name="details">Details</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="time_icon">Time Icon</string>
    <string name="date_icon">Date Icon</string>
    <string name="network_error">Network Error</string>
    <string name="unable_to_get_details">Unable to get location details</string>
    <string name="error_image">Error image</string>
</resources>